kubernetes/monitoring/grafana-mimir/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-mimir
  labels:
    app: grafana-mimir
spec:
  selector:
    matchLabels:
      app: grafana-mimir
  replicas: 0
  template:
    metadata:
      labels:
        app: grafana-mimir
    spec:
      nodeSelector:
        servertype: pc
      containers:
        - name: grafana-mimir
          image: grafana/mimir:3.2.2
          args:
            - "--config.file=/etc/mimir.yaml"
            - "-config.expand-env=true"
          ports:
            - containerPort: 8080
              name: mimir-http
              protocol: TCP
          volumeMounts:
            - name: grafana-mimir-config
              mountPath: /etc/mimir.yaml
              subPath: mimir.yaml
            - name: grafana-mimir-pvc
              mountPath: /data
      volumes:
        - name: grafana-mimir-config
          configMap:
            name: grafana-mimir-config
        - name: grafana-mimir-pvc
          persistentVolumeClaim:
            claimName: grafana-mimir-pvc
