kubernetes/monitoring/grafana-mimir/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-mimir
  namespace: grafana-mimir
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: mimir-http
  selector:
    app: grafana-mimir
  sessionAffinity: None
  type: ClusterIP
