kubernetes/monitoring/grafana-mimir/ingress.yml
---
apiVersion: traefik.io/v1
kind: IngressRoute
metadata:
  name: grafana-mimir
  namespace: grafana-mimir
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`mimir.lan.juusoleinonen.fi`)
      priority: 10
      services:
        - name: grafana-mimir
          port: 8080
  tls:
    secretName: grafana-mimir-certificate
